bk_ida/gccida/g3/initial_reg_note_copy
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2221:19: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                  ^~~~~~~~
                  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2221:28: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v2 = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                ~~~~~~~~~~~^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2226:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( unsigned __int16 *)notes[1]; 
                          ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2237:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( unsigned __int16 *)notes[1]; 
                          ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2242:19: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v5 = rtx_alloc( ( rtx_code)*v4); 
                  ^~~~~~~~
                  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2242:28: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v5 = rtx_alloc( ( rtx_code)*v4); 
                ~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2263:19: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v8 = rtx_alloc( ( rtx_code)*v7); 
                  ^~~~~~~~
                  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2263:28: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v8 = rtx_alloc( ( rtx_code)*v7); 
                ~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2281:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v10 = rtx_alloc( ( rtx_code)*v9); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2281:29: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v10 = rtx_alloc( ( rtx_code)*v9); 
                 ~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2300:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v12 = rtx_alloc( ( rtx_code)*v11); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2300:29: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v12 = rtx_alloc( ( rtx_code)*v11); 
                 ~~~~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2323:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v42 = rtx_alloc( ( rtx_code)*v15); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2323:29: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v42 = rtx_alloc( ( rtx_code)*v15); 
                 ~~~~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2346:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v44 = rtx_alloc( ( rtx_code)*v18); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2346:29: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v44 = rtx_alloc( ( rtx_code)*v18); 
                 ~~~~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2369:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v46 = rtx_alloc( ( rtx_code)*v21); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2369:29: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v46 = rtx_alloc( ( rtx_code)*v21); 
                 ~~~~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/unroll.c:2392:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v50 = rtx_alloc( ( rtx_code)*v24); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initial_reg_note_copy/src/obj/unroll.o] Error 1
